addition of the timer and playerWin determinants according to their life span

--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,14 @@
 }
 
 /* timer */
-.timer {
+.game-timer {
     background-color: red;
     height: 100px;
     width: 100px;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* player 2 */
@@ -70,4 +73,16 @@
     left: 0;
 
 
+}
+
+.Tie-styles{
+    position: absolute;
+    color:  white;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
 }
