--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Press Start 2P', cursive;
 }
 .red-contaner {
     position: relative;
@@ -16,22 +17,25 @@
 
 /* player1 */
 .player1-health {
-    background-color: yellow;
+    background-color: red;
     height: 30px;
     width: 100%;
 
 }
 .p1mains1{
     position: relative;
-    height: 30px;
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    border-top: 4px solid white;
+    border-bottom: 4px solid white;
+    border-left:  4px solid white;
+    
 }
 
 .p1mains2{
     position: absolute;
-    background: blue;
+    background: #818cf8;
     top: 0;
     right: 0;
     bottom: 0;
@@ -42,31 +46,35 @@
 
 /* timer */
 .game-timer {
-    background-color: red;
-    height: 100px;
+    background-color: black;
+    height: 50px;
     width: 100px;
     flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
+    border: 4px solid white;
 }
 
 /* player 2 */
 .player2-health{
-    background-color: yellow;
+    background-color: red;
     height: 30px;
     
 }
 
 .p2mains1{
     position: relative;
-    height: 30px;
     width: 100%;
+    border-top: 4px solid white;
+    border-bottom: 4px solid white;
+    border-right:  4px solid white;
 }
 
 .p2mains2{
     position: absolute;
-    background: blue;
+    background: #818cf8;
     top: 0;
     right: 0;
     bottom: 0;
